2009-12-18  Ivan Maidanski <ivmai@mail.ru>

	* build.xml (jar-dnslook, jar-dnszcon): Don't disable compression.

2009-12-17  Ivan Maidanski <ivmai@mail.ru>

	* build-solaris-amd64-jcgo.sh: New executable file.

2009-12-17  Ivan Maidanski <ivmai@mail.ru>

	* build-linux-x86-jcgo.sh: New executable file.
	* build-win32-x86-jcgo.bat: Update a message.

2009-12-17  Ivan Maidanski <ivmai@mail.ru>

	* build-win32-x86-jcgo.bat: New file.

2009-12-16  Ivan Maidanski <ivmai@mail.ru>

	* build.xml: New file.
	* src/net/sf/ivmaidns/dnslook.java (intMain): Return 0 if no args are
	specified.
	* src/net/sf/ivmaidns/dnszcon.java (intMain): Ditto.
	* src/net/sf/ivmaidns/dnszcon.java (VERSION): Set version to 3.2 (to
	match that in dnslook).

2009-12-16  Ivan Maidanski <ivmai@mail.ru>

	* ChangeLog: New file.
	* GNU_GPL.txt: New file (GNU GPLv2 license).
	* index.html: Move to "htdocs" directory.
	* ivmai/dns/DNSConnection.java: Move to "src/net/sf/ivmaidns/dns".
	* ivmai/dns/DNSMsgHeader.java: Ditto.
	* ivmai/dns/DNSName.java: Ditto.
	* ivmai/dns/DNSRecAltCmp.java: Ditto.
	* ivmai/dns/DNSRecord.java: Ditto.
	* ivmai/storage/FilterStorage.java: Move to
	"src/net/sf/ivmaidns/storage".
	* ivmai/storage/HashedStorage.java: Ditto.
	* ivmai/storage/IntStorage.java: Ditto.
	* ivmai/storage/ListStorage.java: Ditto.
	* ivmai/storage/ObjectStorage.java: Ditto.
	* ivmai/storage/SortedStorage.java: Ditto.
	* ivmai/storage/Storage.java: Ditto.
	* ivmai/storage/StorageEnumerator.java: Ditto.
	* ivmai/storage/StorageEvent.java: Ditto.
	* ivmai/storage/TreeStorage.java: Ditto.
	* ivmai/util/ActivityCore.java: Move to "src/net/sf/ivmaidns/util".
	* ivmai/util/BooleanVector.java: Ditto.
	* ivmai/util/ByteVector.java: Ditto.
	* ivmai/util/CharVector.java: Ditto.
	* ivmai/util/ConstPair.java: Ditto.
	* ivmai/util/ConstVector.java: Ditto.
	* ivmai/util/DoubleVector.java: Ditto.
	* ivmai/util/FloatVector.java: Ditto.
	* ivmai/util/GComparator.java: Ditto.
	* ivmai/util/Immutable.java: Ditto.